--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "onepic",
-  "version": "0.1.0",
-  "private": true,
+  "name": "next-quick-start",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "@types/prop-types": "^15.5.8",
-    "@types/react-redux": "^7.0.1",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/redux": "^3.6.0",
-    "@types/styled-components": "^4.1.6",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0",
-    "redux": "^4.0.1",
-    "styled-components": "^4.1.3"
+    "@types/next": "^2.4.0",
+    "@types/react": "^15.0.38",
+    "@types/superagent": "^3.5.3",
+    "next": "^2.4.7",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "styled-components": "^2.1.1",
+    "superagent": "^3.5.2",
+    "typestyle": "^1.3.7"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "dev": "tsc && next",
+    "start": "next start",
+    "build": "tsc && next build",
+    "transpile": "tsc",
+    "devwatch": "tsc -w"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.21",
-    "@types/react-dom": "^16.0.11",
-    "typescript": "^3.2.4"
+    "typescript": "^2.4.1"
   }
 }
