--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-  "name": "next-quick-start",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@types/moment": "^2.13.0",
-    "@types/next": "^2.4.0",
-    "@types/react": "^15.0.38",
-    "@types/superagent": "^3.5.3",
-    "moment": "^2.24.0",
-    "next": "^2.4.7",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "styled-components": "^2.1.1",
-    "superagent": "^3.5.2",
-    "typestyle": "^1.3.7"
+    "@types/react-router-dom": "^4.3.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "3.1.0"
   },
   "scripts": {
-    "dev": "tsc && next",
-    "start": "next start",
-    "build": "tsc && next build",
-    "transpile": "tsc",
-    "devwatch": "tsc -w"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "typescript": "^2.4.1"
+    "@types/jest": "^23.3.13",
+    "@types/node": "^10.12.21",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
+    "typescript": "^3.3.1"
   }
 }
