--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@types/moment": "^2.13.0",
+    "@types/react-modal": "^3.8.0",
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.6",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
-    "react": "^16.7.0",
+    "react": "^16.8.1",
     "react-dom": "^16.7.0",
+    "react-modal": "^3.8.1",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "styled-components": "^4.1.3"
